--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   body { font-family:'Arial',sans-serif; margin:0; padding:0; scroll-behavior:smooth; transition: background 0.3s, color 0.3s;}
   a { text-decoration:none; transition: color 0.3s;}
   .btn { display:inline-block; padding:8px 15px; background:#1de9b6; color:#000; font-weight:bold; border-radius:5px; margin-top:10px; transition:0.3s; }
-  .btn:hover { background:#14c89f; color:#fff; }
+  .btn:hover { background:#14c89f; }
 
   /* Dark/Light Toggle */
   .toggle-btn { position:fixed; top:15px; right:15px; background:#1de9b6; color:#000; padding:8px 12px; border:none; border-radius:5px; cursor:pointer; z-index:200; }
@@ -27,12 +27,13 @@
   nav a:hover { color:#14c89f; }
 
   /* Container */
-  .container { width:90%; max-width:1000px; margin:auto; padding:100px 20px 20px 20px; }
+  .container { width:90%; max-width:1000px; margin:auto; padding:120px 20px 20px 20px; }
 
   /* Hero */
   .hero { display:flex; flex-direction:column; align-items:center; text-align:center; padding:50px 0 30px 0; }
   .profile-photo { width:160px; height:160px; border-radius:50%; border:4px solid #1de9b6; margin-bottom:20px; object-fit:cover; }
   .hero h1 { font-size:2.5em; margin-bottom:10px; }
+  .hero p.intro { font-size:1.1em; line-height:1.5; max-width:600px; }
   .typing { font-weight:bold; color:#1de9b6; border-right:3px solid #1de9b6; white-space:nowrap; overflow:hidden; display:inline-block; }
 
   @keyframes blink { 50% { border-color: transparent; } }
@@ -43,12 +44,46 @@
 
   /* Cards */
   .skills, .projects, .certificates, .hobbies, .contact { display:flex; flex-wrap:wrap; gap:20px; justify-content:center; }
-  .card { background: rgba(255,255,255,0.05); border:1px solid #1de9b6; border-radius:10px; padding:20px; width:280px; text-align:center; transition: transform 0.3s, box-shadow 0.3s; }
+  .card { background: rgba(255,255,255,0.05); border:1px solid #1de9b6; border-radius:10px; padding:20px; width:280px; text-align:center; transition: transform 0.3s, box-shadow 0.3s; position:relative; cursor:pointer; }
   .card:hover { transform: rotateX(5deg) rotateY(5deg) translateY(-10px); box-shadow:0 15px 40px rgba(0,0,0,0.6); }
   .card i { font-size:2em; margin-bottom:10px; color:#1de9b6; }
-  .certificates .card img { width:60px; margin-bottom:10px; transition: transform 0.3s; }
-  .certificates .card:hover img { transform: scale(1.2); }
-  .certificates .card:hover .btn { background:#14c89f; color:#fff; }
+
+  /* Tooltip for skills */
+  .card[data-tooltip]::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    bottom: 110%;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #1de9b6;
+    color: #000;
+    padding: 5px 10px;
+    border-radius: 5px;
+    white-space: nowrap;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s;
+    font-size: 0.85em;
+    z-index: 10;
+  }
+  .card[data-tooltip]::before {
+    content: "";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent #1de9b6 transparent;
+    opacity: 0;
+    transition: opacity 0.3s;
+    pointer-events: none;
+    z-index: 10;
+  }
+  .card[data-tooltip]:hover::after,
+  .card[data-tooltip]:hover::before {
+    opacity: 1;
+  }
 
   /* Responsive */
   @media(max-width:600px){ 
@@ -77,7 +112,10 @@
   <section id="about" class="hero">
     <img src="assets/profile.jpg" alt="Hammid Bin Aejaz" class="profile-photo">
     <h1>Hammid Bin Aejaz</h1>
-    <p class="typing">Hi! I’m Hammid, an AI and Machine Learning enthusiast. I enjoy turning data into meaningful insights, building smart systems, tackling real-world problems, and creating projects that really matter. Learning new technologies and creating projects that make an impact keeps me motivated every day.</p>
+    <p class="intro">
+      Hi! I’m Hammid, an AI and Machine Learning enthusiast. I enjoy turning data into meaningful insights and building smart systems.  
+      Tackling real-world problems and creating impactful projects keeps me motivated every day.
+    </p>
     <p>
       <a href="mailto:hammidbinaejaz@gmail.com">Email</a> | 
       <a href="https://github.com/hammidbinaejaz" target="_blank">GitHub</a> | 
@@ -89,18 +127,18 @@
   <section id="skills">
     <h2 style="text-align:center;">Skills</h2>
     <div class="skills">
-      <div class="card"><i class="fab fa-python"></i>Python</div>
-      <div class="card"><i class="fab fa-java"></i>Java</div>
-      <div class="card"><i class="fas fa-c"></i>C</div>
-      <div class="card"><i class="fas fa-robot"></i>Machine Learning</div>
-      <div class="card"><i class="fas fa-chart-line"></i>Data Analytics</div>
-      <div class="card"><i class="fas fa-brain"></i>Artificial Intelligence</div>
-      <div class="card"><i class="fas fa-database"></i>EDA</div>
-      <div class="card"><i class="fas fa-project-diagram"></i>Pandas / NumPy / Scikit-Learn</div>
-      <div class="card"><i class="fab fa-git-alt"></i>Git / GitHub</div>
-      <div class="card"><i class="fas fa-network-wired"></i>Data Structures & Algorithms</div>
-      <div class="card"><i class="fas fa-server"></i>Networking</div>
-      <div class="card"><i class="fas fa-layer-group"></i>Deep Learning</div>
+      <div class="card" data-tooltip="Python programming, scripting, and data analysis"><i class="fab fa-python"></i>Python</div>
+      <div class="card" data-tooltip="Java development and OOP concepts"><i class="fab fa-java"></i>Java</div>
+      <div class="card" data-tooltip="C programming and fundamentals"><i class="fas fa-c"></i>C</div>
+      <div class="card" data-tooltip="Building and deploying ML models"><i class="fas fa-robot"></i>Machine Learning</div>
+      <div class="card" data-tooltip="Data analytics using Pandas, Excel, and visualization"><i class="fas fa-chart-line"></i>Data Analytics</div>
+      <div class="card" data-tooltip="AI concepts, neural networks, NLP"><i class="fas fa-brain"></i>Artificial Intelligence</div>
+      <div class="card" data-tooltip="Exploratory Data Analysis"><i class="fas fa-database"></i>EDA</div>
+      <div class="card" data-tooltip="Pandas, NumPy, Scikit-Learn libraries"><i class="fas fa-project-diagram"></i>Pandas / NumPy / Scikit-Learn</div>
+      <div class="card" data-tooltip="Version control and GitHub workflows"><i class="fab fa-git-alt"></i>Git / GitHub</div>
+      <div class="card" data-tooltip="DSA concepts, algorithms, and problem solving"><i class="fas fa-network-wired"></i>Data Structures & Algorithms</div>
+      <div class="card" data-tooltip="Networking fundamentals and protocols"><i class="fas fa-server"></i>Networking</div>
+      <div class="card" data-tooltip="Deep Learning and neural networks"><i class="fas fa-layer-group"></i>Deep Learning</div>
     </div>
   </section>
 
@@ -129,40 +167,29 @@
   <section id="certificates">
     <h2 style="text-align:center;">Certificates</h2>
     <div class="certificates">
-
       <div class="card">
-        <img src="assets/IBM_logo.png" alt="IBM">
         <h3>Artificial Intelligence Fundamentals – IBM | Aug 2025</h3>
         <p>
           <a class="btn" href="assets/IBMDesign20250820-28-p0i2bg.pdf" download>Download PDF</a> | 
           <a class="btn" href="https://www.credly.com/badges/e67bc372-cab4-4de3-a68a-61d09d8e537b" target="_blank">Verify</a>
         </p>
       </div>
-
       <div class="card">
-        <img src="assets/Infosys_logo.png" alt="Infosys">
-        <h3>Data Structures & Algorithms – Infosys</h3>
+        <h3>Data Structures & Algorithms – Infosys Springboard</h3>
         <p><a class="btn" href="assets/DSA_infosys.pdf" download>Download PDF</a></p>
       </div>
-
       <div class="card">
-        <img src="assets/Infosys_logo.png" alt="Infosys">
-        <h3>Advanced DSA – Infosys</h3>
+        <h3>Advanced DSA – Infosys Springboard</h3>
         <p><a class="btn" href="assets/Advanced_DSA.pdf" download>Download PDF</a></p>
       </div>
-
       <div class="card">
-        <img src="assets/Infosys_logo.png" alt="Infosys">
-        <h3>Artificial Intelligence – Infosys</h3>
+        <h3>Artificial Intelligence – Infosys Springboard</h3>
         <p><a class="btn" href="assets/AI_infosys.pdf" download>Download PDF</a></p>
       </div>
-
       <div class="card">
-        <img src="assets/Infosys_logo.png" alt="Infosys">
-        <h3>Querying SQL Databases – Infosys</h3>
+        <h3>Querying SQL Databases – Infosys Springboard</h3>
         <p><a class="btn" href="assets/SQL_DBMS.pdf" download>Download PDF</a></p>
       </div>
-
     </div>
   </section>
 
@@ -192,21 +219,8 @@
 </div>
 
 <script>
-  // Typing effect
-  const typing = document.querySelector('.typing');
-  const text = typing.textContent;
-  typing.textContent = '';
-  let i=0;
-  function typeWriter() {
-    if(i < text.length) {
-      typing.textContent += text.charAt(i);
-      i++;
-      setTimeout(typeWriter,100);
-    } else {
-      setInterval(()=>{typing.classList.toggle('blink')},500);
-    }
-  }
-  typeWriter();
+  // Dark/light toggle
+  function toggleTheme() { document.body.classList.toggle('dark'); }
 
   // Scroll reveal
   const sections = document.querySelectorAll('section');
@@ -216,11 +230,6 @@
     });
   }, {threshold:0.1});
   sections.forEach(sec=>observer.observe(sec));
-
-  // Dark/light toggle
-  function toggleTheme() {
-    document.body.classList.toggle('dark');
-  }
 </script>
 
 </body>
